Delete old social icons; add new social icons; resize social icons; fix spacing issues with social icons; fix responsiveness for social icon box; tweak html and css for mobile responsiveness at xs sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,20 @@ body {
   background-color: #F5F5F5;
 }
 
+.social-container {
+  text-align: center;
+}
+
 .footer {
   background-color: #F5F5F5;
 }
 
+/* Images */
+
+.social-icon {
+  display: inline-block;
+  margin: 2px 5px;
+  height: 64x;
+  width: 64px;
+
+}
